# crud_shop_slop

./: Cargo.toml  Dockerfile  README.md  compose.yaml  index.html  index.js  style.css
configuration/: base.toml  local.toml  production.toml
src/: config.rs  dtos.rs  error.rs  lib.rs  main.rs
src/db/: categories.rs  customers.rs  mod.rs  order_items.rs  orders.rs  products.rs  shipments.rs  shipments_items.rs  suppliers.rs
src/handlers/: category_handlers.rs  customer_handlers.rs  mod.rs  order_handlers.rs  product_handlers.rs  shipment_handlers.rs  supplier_handlers.rs
src/migration/: m20220101_000001_create_table.rs  m20220101_000002_insert_mock_data.rs  m20220101_000003_change_time.rs  m20220101_000004_change_order_time.rs  mod.rs
src/services/: category_service.rs  customer_service.rs  mod.rs  order_service.rs  product_service.rs  shipment_service.rs  supplier_service.rs
