[package]
name = "crud_shop_slop"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "slopshop"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
rust_decimal = "1.39.0"
sea-orm = { version = "1.1.19", features = ["macros", "sqlx-postgres", "runtime-actix", "rust_decimal"] }
sea-orm-migration = { version = "1.1.19", features = ["runtime-actix", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
